--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "node-sass": "^4.14.1",
-    "bootstrap": "^4.5.0"
+    "bootstrap": "^4.5.0",
+    "react-bootstrap": "^1.0.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
